# oews

./: .dockerignore  .env.template  .gitattributes  .gitignore  CLAUDE.md  CODEBASE_READABILITY_RECOMMENDATIONS.md  Caddyfile  DATA_AGENT_README.md  Dockerfile  LICENSE  QUICK_START.md  README.md  Refactoring_Plan.md  alembic.ini  analyze_columns.py  app.py  check_group_columns.py  convert_to_csv.py  database_schema.sql  docker-compose.local.yml  docker-compose.yml  manage_db.py  pyproject.toml  requirements.txt  restore_backups.sh  setup.py  standardize_all_files.py  standardize_columns.py  test_standardize.py
.claude/: CLAUDE.md
.github/workflows/: deploy-azure.yml  deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: 339b7f1f5ff3_initial_oews_migration_schema.py
config/: __init__.py  constants.py  database.py  llm_models.yaml  settings.py
data/: DATA_MIGRATED.txt  column_analysis.json  oews.db  unique_columns.txt
data/.claude/: settings.local.json
docs/: AUTHENTICATION.md  PRODUCTION_READINESS.md  SERVER_SETUP.md  api-frontend-integration.md  github-spark-prompt.md  workflow-visualization.md
docs/deployment/: README.md
docs/plans/: 2025-01-26-execution-traceability-implementation.md  2025-01-26-execution-traceability.md  2025-10-21-data-agent-plan-analysis-v2.md  2025-10-21-data-agent-plan-analysis-v3.md  2025-10-21-data-agent-plan-analysis.md  2025-10-21-oews-data-agent-v2.md  2025-10-21-oews-data-agent-v3.md  2025-10-21-oews-data-agent.md  2025-10-23-agent-improvements.md  2025-10-23-workflow-observability-design.md  2025-10-23-workflow-observability.md  2025-10-24-frontend-design.md  2025-11-08-azure-container-apps-deployment.md  2025-11-09-docker-compose-deployment-design-v2.md  2025-11-09-docker-compose-deployment-design.md  2025-11-09-docker-compose-deployment-implementation-plan.md  (+13 more)
logs/: test.log.1
notebook/: L2.ipynb  L2.py  README.md  helper.py
scripts/: analyze_workflow.py  backup.sh  deploy.sh  quick-deploy.sh  setup-server.sh  start_server.sh  visualize_workflow.py
spec/: oews-spec.md
src/: __init__.py  main.py  oews_schema.py
tests/: conftest.py  test_api_endpoints.py  test_api_throttling.py  test_cli_commands.py  test_cli_main.py  test_database.py  test_database_tools.py  test_download_bls_data.py  test_excel_to_csv.py  test_feedback_endpoints.py  test_feedback_github.py  test_feedback_integration.py  test_feedback_validation.py  test_fuzzy_matching.py  test_llm_config.py  test_llm_factory.py  test_logger.py  test_migrate_queue.py  test_model_overrides.py  test_parse_utils.py  test_pipeline_workflow.py  test_schema.py  test_schema_centralization.py  test_text2sql_agent_react.py  test_trace_extraction.py  test_trace_utils.py  test_web_research_agent.py  test_web_research_tools.py
(+108 files in other folders)
